--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.container {
+  padding-top: 30px;
+  width: 400px;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input {
+  padding: 5px 15px;
+  width: 400px;
+  border-radius: 10px;
+  border-width: 2px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.user-list {
+  margin-top: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.user {
+  list-style: none;
+  margin: 10px 0;
+  padding: 10px;
+  background: #233142;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  border-radius: 15px;
+}
+
+.user-id {
   color: white;
+  margin-right: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.user-name {
+  color: white;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-age {
+  color: #79C8C4;
+  margin-left: auto;
+  font-weight: bold;
 }
