--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .container {
   padding-top: 30px;
-  width: 400px;
+  width: 80%;
   margin: auto;
 }
 
 .input {
   padding: 5px 15px;
-  width: 400;
+  width: 100%;
   border-radius: 5px;
   border-width: 2px;
   font-size: 30px;
